--- a/CuponWebSite/CuponWebSite/view/SysAdmin.html
+++ b/CuponWebSite/CuponWebSite/view/SysAdmin.html
@@ -45,7 +45,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#" onclick="SetView('products');">CupoNoa</a>
+                        <a class="navbar-brand" href="#" onclick="SetView('page-wrapper');">CupoNoa</a>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -54,29 +54,7 @@
                                 <a href="#" onclick="SetView('about');">About</a>
                             </li>
                             <li>
-                                <a href="#" onclick="SetView('about');">Services</a>
-                            </li>
-                            <li>
-                                <a href="#" onclick="SetView('about');">Contact</a>
-                            </li>
-                            <li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown">Search<b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <div class="navbar-content">
-                                            <div class="" id="nav-collapse3">
-                                                <form class="navbar-form navbar-right" role="search">
-                                                    <div class="form-group">
-                                                        <input type="text" class="form-control" placeholder="Search" />
-                                                    </div>
-                                                    <button type="submit" class="btn "><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-                                                    <br />
-                                                    <a href="#" onclick="SetView('search');$('.dropdown.open .dropdown-toggle').dropdown('toggle');navigator.geolocation.getCurrentPosition(showdPosition);">Advanced</a>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
+                                <a href="#" onclick="SetView('contact');">Contact</a>
                             </li>
                         </ul>
 
@@ -308,7 +286,184 @@
             </div>
             <!-- /#wrapper -->
         </div>
+        
+        <div class="container" id="about">
+        <div class="team">
+            <div class="center wow fadeInDown">
+                <h2>Team of CupoNoa</h2>
+                <p class="lead">This is a project done in Object Oriented Desgin & Analysis class.</p>
+            </div>
 
+            <div class="row clearfix">
+                <div class="col-md-4 col-sm-6">
+                    <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="media">
+                            <div class="pull-left">
+                                <a href="#">
+                                    <img class="media_image" src="images/Male_User.jpg" alt=""></a>
+                            </div>
+                            <div class="media-body">
+                                <h4>Ido Hubara</h4>
+                                <h5>Founder and CEO</h5>
+
+                                <ul class="social_icons">
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!--/.media -->
+                        <p>28 years old, Kibutznik, and loves to program. In his spare time loves to cook, bake and watch TV. Ido is one of the founding member of the Application.</p>
+                    </div>
+                </div>
+                <!--/.col-lg-4 -->
+
+
+                <div class="col-md-4 col-sm-6 col-md-offset-2">
+                    <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="media">
+                            <div class="pull-left">
+                                <a href="#">
+                                    <img class="media_image" src="images/Female_User.jpg" alt=""></a>
+                            </div>
+                            <div class="media-body">
+                                <h4>Noa Roy</h4>
+                                <h5>Founder and CEO</h5>
+                                <ul class="social_icons">
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!--/.media -->
+                        <p>25 years old. Loves cats, music and reading. Noa is one of the founding members of the Applicaation.</p>
+                    </div>
+                </div>
+                <!--/.col-lg-4 -->
+            </div>
+            <!--/.row -->
+            <div class="row team-bar">
+                <div class="first-one-arrow hidden-xs">
+                    <hr>
+                </div>
+                <div class="first-arrow hidden-xs">
+                    <hr>
+                    <i class="fa fa-angle-up"></i>
+                </div>
+                <div class="second-arrow hidden-xs">
+                    <hr>
+                    <i class="fa fa-angle-down"></i>
+                </div>
+                <div class="third-arrow hidden-xs">
+                    <hr>
+                    <i class="fa fa-angle-up"></i>
+                </div>
+                <div class="fourth-arrow hidden-xs">
+                    <hr>
+                    <i class="fa fa-angle-down"></i>
+                </div>
+            </div>
+            <!--skill_border-->
+
+            <div class="row clearfix">
+                <div class="col-md-4 col-sm-6 col-md-offset-2">
+                    <div class="single-profile-bottom wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="media">
+                            <div class="pull-left">
+                                <a href="#">
+                                    <img class="media_image" src="images/Female_User.jpg" alt=""></a>
+                            </div>
+
+                            <div class="media-body">
+                                <h4>Saar Tal</h4>
+                                <h5>Founder and CEO</h5>
+
+                                <ul class="social_icons">
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!--/.media -->
+                        <p>26 years old. Loves music, watching TV and going to the beach. Saar is one of the founding member if the Application. </p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-md-offset-2">
+                    <div class="single-profile-bottom wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms">
+                        <div class="media">
+                            <div class="pull-left">
+                                <a href="#">
+                                    <img class="media_image" src="images/Male_User.jpg" alt=""></a>
+                            </div>
+                            <div class="media-body">
+                                <h4>Natan Semyonov</h4>
+                                <h5>Founder and CEO</h5>
+                                <ul class="social_icons">
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!--/.media -->
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                    </div>
+                </div>
+            </div>
+            <!--/.row-->
+        </div>
+        <!--section-->
+    </div>
+        <!-- /about -->
+        
+        <div class="container" id="contact">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <div class="well well-sm">
+                        <form class="form-horizontal" action="" method="post">
+                            <fieldset>
+                                <legend class="text-center">Contact us</legend>
+
+                                <!-- Name input-->
+                                <div class="form-group">
+                                    <label class="col-md-3 control-label" for="name">Name</label>
+                                    <div class="col-md-9">
+                                        <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
+                                    </div>
+                                </div>
+
+                                <!-- Email input-->
+                                <div class="form-group">
+                                    <label class="col-md-3 control-label" for="email">Your E-mail</label>
+                                    <div class="col-md-9">
+                                        <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
+                                    </div>
+                                </div>
+
+                                <!-- Message body -->
+                                <div class="form-group">
+                                    <label class="col-md-3 control-label" for="message">Your message</label>
+                                    <div class="col-md-9">
+                                        <textarea class="form-control" id="message" name="message" placeholder="Please enter your message here..." rows="5"></textarea>
+                                    </div>
+                                </div>
+
+                                <!-- Form actions -->
+                                <div class="form-group">
+                                    <div class="col-md-12 text-right">
+                                        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                                    </div>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /Contact -->
         <!-- /Profile -->
         <div class="container">
 
