--- a/CuponWebSite/CuponWebSite/view/index.html
+++ b/CuponWebSite/CuponWebSite/view/index.html
@@ -143,7 +143,7 @@
                 <div>
                     <a href="#" id="RecNewButton" class="list-group-item" onclick="RecNewButton_OnClick();">Reccomended</a>
                 </div>
-                <hr/>
+                <hr />
                 Categories:
                 <div class="list-group">
                     <a href="#" class="list-group-item" onclick="GetCupons(0);">Restaurants</a>
@@ -188,7 +188,7 @@
                         </div>
 
                     </div>-->
-                
+
                 <div class="row" id="Reccupons_div">
                 </div>
                 <div class="row" id="cupons_div">
@@ -510,7 +510,7 @@
 
             <!-- edit form column -->
             <div class="col-md-9 personal-info">
-                
+
                 <h3>Personal info</h3>
                 <div class="row" id="profileMain">
                     <div class="col-lg-8">
@@ -598,7 +598,6 @@
                     <!-- /.col-lg-4 -->
                 </div>
                 <div class="alert alert-danger alert-dismissable" id="profilealert" hidden>
-                   
                 </div>
                 <div id="ChangePassword" class="form-horizontal" hidden>
                     <div class="form-group">
@@ -662,140 +661,180 @@
         </div>
     </div>
     <!-- /Profile -->
-    
+
     <div class="container" id="contact">
-        
-    </div>
-    <!-- /contact -->
-    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="well well-sm">
+                    <form class="form-horizontal" action="" method="post">
+                        <fieldset>
+                            <legend class="text-center">Contact us</legend>
 
-        <hr>
+                            <!-- Name input-->
+                            <div class="form-group">
+                                <label class="col-md-3 control-label" for="name">Name</label>
+                                <div class="col-md-9">
+                                    <input id="name" name="name" type="text" placeholder="Your name" class="form-control">
+                                </div>
+                            </div>
 
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; CupoNoa 2015</p>
-                </div>
-            </div>
-        </footer>
+                            <!-- Email input-->
+                            <div class="form-group">
+                                <label class="col-md-3 control-label" for="email">Your E-mail</label>
+                                <div class="col-md-9">
+                                    <input id="email" name="email" type="text" placeholder="Your email" class="form-control">
+                                </div>
+                            </div>
 
-    </div>
-    <!-- /.container -->
+                            <!-- Message body -->
+                            <div class="form-group">
+                                <label class="col-md-3 control-label" for="message">Your message</label>
+                                <div class="col-md-9">
+                                    <textarea class="form-control" id="message" name="message" placeholder="Please enter your message here..." rows="5"></textarea>
+                                </div>
+                            </div>
 
-    <div id="WaitModal" class="modal fade" tabindex="-1" role="dialog" data-keyboard="false"
-        data-backdrop="static">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header" style="text-align: center">
-                    <h3>Searching for Cupons</h3>
-                </div>
-                <div class="modal-body">
-                    <div style="height: 200px">
-                        <span id="searching_spinner_center" style="position: absolute; display: block; top: 50%; left: 50%;"></span>
-                    </div>
-                </div>
-                <div class="modal-footer" style="text-align: center"></div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="CuponModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="CuponName">Modal</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-md-10">
-                            <span><b>Description:&nbsp</b></span>
-                            <span id="cuponDescription"></span>
-                            <br />
-                            <span><b>Location:&nbsp</b></span>
-                            <span id="cuponLocation"></span>
-                            <br />
-                            <span><b>Expiration Date:&nbsp</b></span>
-                            <span id="cuponExpiration"></span>
-                        </div>
-                        <div class="col-md-2">
-                            <span id="cuponOriginalPrice" style="color: red; text-decoration: line-through; font-size: larger;"></span>
-                            <span id="cuponPrice" style="color: green; text-decoration: none; font-size: larger;"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" id="PurchaseButton" class="btn btn-primary">Buy</button>
+                            <!-- Form actions -->
+                            <div class="form-group">
+                                <div class="col-md-12 text-right">
+                                    <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-    <div class="modal fade" id="GeneralModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="generalModalTitle">Modal</h4>
+        <!-- /contact -->
+        <div class="container">
+
+            <hr>
+
+            <!-- Footer -->
+            <footer>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <p>Copyright &copy; CupoNoa 2015</p>
+                    </div>
                 </div>
-                <div class="modal-body" id="generalModalBody">
-                </div>
-                <div class="modal-footer" id="generalModalFooter">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </footer>
+
+        </div>
+        <!-- /.container -->
+
+        <div id="WaitModal" class="modal fade" tabindex="-1" role="dialog" data-keyboard="false"
+            data-backdrop="static">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header" style="text-align: center">
+                        <h3>Searching for Cupons</h3>
+                    </div>
+                    <div class="modal-body">
+                        <div style="height: 200px">
+                            <span id="searching_spinner_center" style="position: absolute; display: block; top: 50%; left: 50%;"></span>
+                        </div>
+                    </div>
+                    <div class="modal-footer" style="text-align: center"></div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="modal fade" id="SocialCupon" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Add New Cupon</h4>
-                    <em>Add Cupon from social networks</em>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <label class="col-md-3 control-label">Cupon Name:</label>
-                        <div class="col-md-8">
-                            <input class="form-control" type="text" id="SocialName" />
+        <div class="modal fade" id="CuponModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="CuponName">Modal</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-md-10">
+                                <span><b>Description:&nbsp</b></span>
+                                <span id="cuponDescription"></span>
+                                <br />
+                                <span><b>Location:&nbsp</b></span>
+                                <span id="cuponLocation"></span>
+                                <br />
+                                <span><b>Expiration Date:&nbsp</b></span>
+                                <span id="cuponExpiration"></span>
+                            </div>
+                            <div class="col-md-2">
+                                <span id="cuponOriginalPrice" style="color: red; text-decoration: line-through; font-size: larger;"></span>
+                                <span id="cuponPrice" style="color: green; text-decoration: none; font-size: larger;"></span>
+                            </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <label class="col-md-3 control-label">Cupon Link:</label>
-                        <div class="col-md-8">
-                            <input class="form-control" type="text" id="SocialLink" />
-                        </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" id="PurchaseButton" class="btn btn-primary">Buy</button>
                     </div>
-                </div>
-                <div class="modal-footer" id="Div3">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <input type="button" class="btn btn-primary" onclick="NewSocialCupon();" value="Save Changes" />
-
                 </div>
             </div>
         </div>
-    </div>
+        <div class="modal fade" id="GeneralModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="generalModalTitle">Modal</h4>
+                    </div>
+                    <div class="modal-body" id="generalModalBody">
+                    </div>
+                    <div class="modal-footer" id="generalModalFooter">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="SocialCupon" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">Add New Cupon</h4>
+                        <em>Add Cupon from social networks</em>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <label class="col-md-3 control-label">Cupon Name:</label>
+                            <div class="col-md-8">
+                                <input class="form-control" type="text" id="SocialName" />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-md-3 control-label">Cupon Link:</label>
+                            <div class="col-md-8">
+                                <input class="form-control" type="text" id="SocialLink" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer" id="Div3">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <input type="button" class="btn btn-primary" onclick="NewSocialCupon();" value="Save Changes" />
 
-    <!-- jQuery -->
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/cupon.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        //navigator.geolocation.getCurrentPosition(showdPosition);
-        $('#radioBtn a').on('click', function () {
-            var sel = $(this).data('title');
-            var tog = $(this).data('toggle');
-            $('#' + tog).prop('value', sel);
+        <!-- jQuery -->
 
-            $('a[data-toggle="' + tog + '"]').not('[data-title="' + sel + '"]').removeClass('active').addClass('notActive');
-            $('a[data-toggle="' + tog + '"][data-title="' + sel + '"]').removeClass('notActive').addClass('active');
-            ChangeAlertSetting(this.id[this.id.length-1]);
-        })
-    </script>
+        <!-- Bootstrap Core JavaScript -->
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/main.js"></script>
+        <script src="js/cupon.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            //navigator.geolocation.getCurrentPosition(showdPosition);
+            $('#radioBtn a').on('click', function () {
+                var sel = $(this).data('title');
+                var tog = $(this).data('toggle');
+                $('#' + tog).prop('value', sel);
 
+                $('a[data-toggle="' + tog + '"]').not('[data-title="' + sel + '"]').removeClass('active').addClass('notActive');
+                $('a[data-toggle="' + tog + '"][data-title="' + sel + '"]').removeClass('notActive').addClass('active');
+                ChangeAlertSetting(this.id[this.id.length - 1]);
+            })
+        </script>
 </body>
 
 </html>
